# shirlywhirl-prone

./: README.md  requirements.txt
pyprone/: pyproject.toml  tox.ini
pyprone/pyprone/_scripts/: setup.py
pyprone/pyprone/_scripts/scripts/: getter.py
pyprone/pyprone/scripts/: pyproject.toml  setup.py  tox.ini
pyprone/pyprone/scripts/scripts/: fb_getter.py  getter.py
pyprone/pyprone/scripts/tests/: conftest.py  test_scripts.py
pyprone/pyprone/src/: pyproject.toml
pyprone/tests/: conftest.py  test_pyprone.py  test_scripts.py
